# Fastcamp-de-Agentes-Inteligentes

./: .gitignore  README.md
Aula 2/: Relatório agente python.docx  react-python-agent_aula.ipynb  react-python-agent_pratica.ipynb  tasks.txt
Aula 3/: Relatorio 3 - Natalie Tolentino.docx  escola_pratica.py  example.py  example_2.py  example_3_aulapy  example_4_aula.py  notas.txt  pyproject.toml
Aula 4/: Makefile  Relatorio 4 - Natalie Tolentino.docx  docker-compose.yml
Aula 5/: Relatório 5 - Natalie Tolentino.docx
Aula 6/: Relatório 6 - Natalie Tolentino.docx  qdrant_aula.py  qdrant_pratica.py
source/: Makefile  docker-compose.yml
